<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    style="@style/background" >
    
    <TextView
            style="@style/pageheader"
            android:text="@string/addemail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_emailadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_emailadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:minWidth="240dp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/b_emailadd"
        style="@style/buttonbackground"
        android:onClick="doClickSaveEmails"
        android:text="@string/saveemail" />

</LinearLayout>